--- a/monitor.html
+++ b/monitor.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/ofertas.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/nav-footer.css">
     <link rel="stylesheet" href="css/productos.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -17,6 +17,39 @@
 </head>
 
 <body>
+
+    <header class="header">
+            <div class="container">
+                <div class="header-content">
+                    <div class="logo">
+                        <img src="imagenes/logo-empresa/logo-removebg-preview.png" class="logo-empresa" alt="NextByte Logo">
+                    </div>
+                    <nav class="main-nav">
+                        <a href="index.html" class="nav-link">Home</a>
+                        <a href="#" class="nav-link">Productos</a>
+                        <a href="#" class="nav-link">Nosotros</a>
+                        <a href="#" class="nav-link">Blogs</a>
+                        <a href="#" class="nav-link">Contacto</a>
+                    </nav>
+
+                    <div class="header-actions">
+                        <button id="btnCarritoVistaPrevia" class="cart-btn">
+                            🛒 Carrito (<span id="contador-carrito">0</span>)
+                        </button>
+
+                        <div id="vista-previa-carrito" class="vista-previa-carrito">
+                            <p id="carrito-vacio-texto" style="display: none;">El carrito está vacío.</p>
+                            <ul id="lista-productos-previa"></ul>
+                            <div class="acciones-previa">
+                                <p>Total: <span id="total-previa">$0</span></p>
+                                <button id="btnVerCarritoCompleto">Ver Carrito</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+
 
     <div class="main-content">
         <div class="galeria">
@@ -51,42 +84,6 @@
                 <p>$194.990</p>
             </div>
 
-     <header class="header">
-            <div class="container">
-                <div class="header-content">
-                    <div class="logo">
-                        <img src="imagenes/logo-empresa/logo-removebg-preview.png" class="logo-empresa" alt="NextByte Logo">
-                    </div>
-                    <nav class="main-nav">
-                        <a href="index.html" class="nav-link">Home</a>
-                        <a href="#" class="nav-link">Productos</a>
-                        <a href="#" class="nav-link">Nosotros</a>
-                        <a href="#" class="nav-link">Blogs</a>
-                        <a href="#" class="nav-link">Contacto</a>
-                    </nav>
-
-                    <div class="header-actions">
-                        <button id="btnCarritoVistaPrevia" class="cart-btn">
-                            🛒 Carrito (<span id="contador-carrito">0</span>)
-                        </button>
-
-                        <div id="vista-previa-carrito" class="vista-previa-carrito">
-                            <p id="carrito-vacio-texto" style="display: none;">El carrito está vacío.</p>
-                            <ul id="lista-productos-previa"></ul>
-                            <div class="acciones-previa">
-                                <p>Total: <span id="total-previa">$0</span></p>
-                                <button id="btnVerCarritoCompleto">Ver Carrito</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </header>
-
-
-    
-
-        
 
         <footer class="footer">
         <div class="container">
