--- a/teclado.html
+++ b/teclado.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NextByte | Tienda de Tecnología</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/productos.css">
+    <link rel="stylesheet" href="css/ofertas.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/nav-footer.css">
+    <link rel="stylesheet" href="css/productos.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -17,7 +18,7 @@
 
 <body>
 
-     <header class="header">
+    <header class="header">
             <div class="container">
                 <div class="header-content">
                     <div class="logo">
@@ -50,42 +51,40 @@
         </header>
 
 
-    
-
-         <section>
-            <div class="ofertas">
-                <a href="monitor.html" class="oferta card">
-                    <img src="imagenes/monitor/frontal-monitor.jpg" class="card-img-top" alt="Monitor Gamer">
-                    <div class="card-body">
-                        <h5 class="card-title">Monitor Xiaomi G34WQi</h5>
-                        <div class="valor">
-                            <span>desde:</span>
-                            <p><strong>$195.990</strong></p>
-                        </div>
-                    </div>
-                </a>
-                <a href="teclado.html" class="oferta card">
-                    <img src="imagenes/teclado/teclado-ajazz.jpg" class="card-img-top" alt="Teclado mecánico">
-                    <div class="card-body">
-                        <h5 class="card-title">ATTACK SHARK Ajazz AK820 Pro</h5>
-                        <div class="valor">
-                            <span>desde:</span>
-                            <p><strong>$99.990</strong></p>
-                        </div>
-                    </div>
-                </a>
-                <a href="mouse.html" class="oferta card">
-                    <img src="imagenes/mouse/mouse-img2.webp" class="card-img-top" alt="Mouse Gamer">
-                    <div class="card-body">
-                        <h5 class="card-title">Logitech G502 Hero</h5>
-                        <div class="valor">
-                            <span>desde:</span>
-                            <p><strong>$70.000</strong></p>
-                        </div>
-                    </div>
-                </a>
+    <div class="main-content">
+        <div class="galeria">
+            <div class="principal">
+                <div class="oferta-tag">¡Oferta!</div>
+                <img src="imagenes/teclado/teclado-ajazz.jpg" alt="Teclado Gamer">
+                <div class="secundarias">
+                    <img src="imagenes/teclado/teclado-2.webp" alt="Foto 2">
+                    <img src="imagenes/teclado/teclado-3.webp" alt="Foto 3">
+                    <img src="imagenes/teclado/teclado-4.webp" alt="Foto 4">
+                </div>
             </div>
-        </section>
+        </div>
+
+        <div class="detalles-producto">
+            <div class="nombre-producto">
+                <h2>Logitech G502 Hero</h2>
+            </div>
+            <div class="descripcion">
+                <ul>
+
+                    <li>Tracking: Logitech Hero [Optico]</li>
+                    <li>Cantidad de botones: 11</li>
+                    <li>DPI máximo: 25600</li>
+                    <li>Cableado: Alámbrico</li>
+                    <li>Peso: 121 g</li>
+                    <li>DPI ajustable: Sí</li>
+                    <li>Color: Negro</li>
+
+                </ul>
+            </div>
+            <div class="valor">
+                <p>$42.990</p>
+            </div>
+
 
         <footer class="footer">
         <div class="container">
@@ -113,5 +112,7 @@
             </div>
         </div>
     </footer>
+
+    <script src="js/intercambio-imagenes.js"></script>
 
 </body>
