--- a/teclado.html
+++ b/teclado.html
@@ -65,8 +65,9 @@
         </div>
 
         <div class="detalles-producto">
+            <img src="imagenes/teclado/teclado-ajazz.jpg" alt="Teclado Gaming" style="display:none;">
             <div class="nombre-producto">
-                <h2>Logitech G502 Hero</h2>
+                <h2>ATTACK SHARK Ajazz AK820 Pro</h2>
             </div>
             <div class="descripcion">
                 <ul>
@@ -83,6 +84,10 @@
             </div>
             <div class="valor">
                 <p>$42.990</p>
+            </div>
+            <div>
+                <button class="btn btn-comprar">Comprar</button>
+                <button class="btn btn-agregar">Agregar al carrito</button>
             </div>
 
 
@@ -114,5 +119,6 @@
     </footer>
 
     <script src="js/intercambio-imagenes.js"></script>
+    <script src="js/carrito.js"></script>
 
 </body>
