--- a/mouse.html
+++ b/mouse.html
@@ -26,10 +26,10 @@
                 </div>
                 <nav class="main-nav">
                     <a href="index.html" class="nav-link">Home</a>
-                    <a href="#" class="nav-link">Productos</a>
-                    <a href="#" class="nav-link">Nosotros</a>
-                    <a href="#" class="nav-link">Blogs</a>
-                    <a href="#" class="nav-link">Contacto</a>
+                    <a href="productos.html" class="nav-link">Productos</a>
+                    <a href="nosotros.html" class="nav-link">Nosotros</a>
+                    <a href="blogs.html" class="nav-link">Blogs</a>
+                    <a href="contacto.html" class="nav-link">Contacto</a>
                 </nav>
 
                 <div class="header-actions">
