implmentacion blogs y mejoras sobre nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -93,12 +93,18 @@
             <h2 class="section-title">Nuestra Historia</h2>
             <div class="historia-content">
                 <div class="historia-text">
-                    <p>NextByte nació en 2015 con la visión de revolucionar el mercado tecnológico chileno. Fundada por un grupo de apasionados por la tecnología, nuestra empresa comenzó como un pequeño emprendimiento con grandes sueños.</p>
-                    <p>Hoy, después de años de crecimiento y evolución, nos hemos consolidado como referentes en el sector, ofreciendo productos de alta calidad y un servicio excepcional que nos distingue de la competencia.</p>
-                    <p>Nuestro compromiso con la innovación y la satisfacción del cliente nos ha permitido expandirnos, llegando a miles de hogares y empresas en todo el país con soluciones tecnológicas que transforman la manera de trabajar, jugar y crear.</p>
+                    <p>NextByte nació en 2025 con la visión de revolucionar el mercado tecnológico chileno. Fundada por
+                        un grupo de apasionados por la tecnología, nuestra empresa comenzó como un pequeño
+                        emprendimiento con grandes sueños.</p>
+                    <p>Hoy, después de años de crecimiento y evolución, nos hemos consolidado como referentes en el
+                        sector, ofreciendo productos de alta calidad y un servicio excepcional que nos distingue de la
+                        competencia.</p>
+                    <p>Nuestro compromiso con la innovación y la satisfacción del cliente nos ha permitido expandirnos,
+                        llegando a miles de hogares y empresas en todo el país con soluciones tecnológicas que
+                        transforman la manera de trabajar, jugar y crear.</p>
                 </div>
                 <div class="historia-imagen">
-                    <img src="imagenes/nosotros/historia.jpg" alt="Historia de NextByte">
+                    <img src="imagenes\imagen.jpg" alt="Historia de NextByte">
                 </div>
             </div>
         </section>
@@ -107,11 +113,15 @@
         <section class="mision-vision">
             <div class="mision">
                 <h3>Misión</h3>
-                <p>Proveer soluciones tecnológicas innovadoras y de alta calidad que empoderen a nuestros clientes, mejorando su productividad, entretenimiento y calidad de vida a través de productos confiables y un servicio excepcional.</p>
+                <p>Proveer soluciones tecnológicas innovadoras y de alta calidad que empoderen a nuestros clientes,
+                    mejorando su productividad, entretenimiento y calidad de vida a través de productos confiables y un
+                    servicio excepcional.</p>
             </div>
             <div class="vision">
                 <h3>Visión</h3>
-                <p>Ser la tienda de tecnología preferida en Chile, reconocida por nuestra innovación, compromiso con el cliente y contribución al desarrollo tecnológico del país, inspirando a una nueva generación de amantes de la tecnología.</p>
+                <p>Ser la tienda de tecnología preferida en Chile, reconocida por nuestra innovación, compromiso con el
+                    cliente y contribución al desarrollo tecnológico del país, inspirando a una nueva generación de
+                    amantes de la tecnología.</p>
             </div>
         </section>
 
@@ -120,26 +130,27 @@
             <h2 class="section-title">Nuestro Equipo</h2>
             <div class="equipo-grid">
                 <div class="miembro-equipo">
-                    <img src="imagenes/nosotros/equipo1.jpg" alt="Carlos Méndez" class="miembro-imagen">
-                    <div class="miembro-nombre">Carlos Méndez</div>
-                    <div class="miembro-cargo">CEO & Fundador</div>
-                    <p>Apasionado por la tecnología y la innovación con más de 15 años de experiencia en el sector.</p>
+                    <img src="imagenes\Mary Barra (1).webp" alt="Carlos Méndez" class="miembro-imagen">
+                    <div class="miembro-nombre">Ana Rodríguez</div>
+                    <div class="miembro-cargo">CEO & Fundadora</div>
+                    <p>Apasionada por la tecnología y la innovación con más de 15 años de experiencia en el sector.</p>
                 </div>
                 <div class="miembro-equipo">
-                    <img src="imagenes/nosotros/equipo2.jpg" alt="Ana Rodríguez" class="miembro-imagen">
-                    <div class="miembro-nombre">Ana Rodríguez</div>
+                    <img src="imagenes\sarah-chemouli-banco-santander.jpg" alt="Ana Rodríguez" class="miembro-imagen">
+                    <div class="miembro-nombre">María Paz Velazquez</div>
                     <div class="miembro-cargo">Directora de Marketing</div>
                     <p>Especialista en estrategias digitales y crecimiento de marcas en el ámbito tecnológico.</p>
                 </div>
                 <div class="miembro-equipo">
-                    <img src="imagenes/nosotros/equipo3.jpg" alt="Javier Soto" class="miembro-imagen">
+                    <img src="imagenes\mejor-jefe-ventas_003.jpg" alt="Javier Soto" class="miembro-imagen">
                     <div class="miembro-nombre">Javier Soto</div>
                     <div class="miembro-cargo">Jefe de Ventas</div>
-                    <p>Conoce cada producto como la palma de su mano y siempre encuentra la solución perfecta para cada cliente.</p>
+                    <p>Conoce cada producto como la palma de su mano y siempre encuentra la solución perfecta para cada
+                        cliente.</p>
                 </div>
                 <div class="miembro-equipo">
-                    <img src="imagenes/nosotros/equipo4.jpg" alt="María Fernández" class="miembro-imagen">
-                    <div class="miembro-nombre">María Fernández</div>
+                    <img src="imagenes\stock-3-2048x1366-1-1024x683.jpg" alt="María Fernández" class="miembro-imagen">
+                    <div class="miembro-nombre">Pía Fernández</div>
                     <div class="miembro-cargo">Gerente de Soporte Técnico</div>
                     <p>Lidera nuestro equipo de soporte asegurando que cada cliente reciba la ayuda que necesita.</p>
                 </div>
@@ -158,7 +169,8 @@
                 <div class="valor-item">
                     <div class="valor-icono">🤝</div>
                     <div class="valor-titulo">Confianza</div>
-                    <p>Construimos relaciones duraderas basadas en la honestidad y transparencia con nuestros clientes.</p>
+                    <p>Construimos relaciones duraderas basadas en la honestidad y transparencia con nuestros clientes.
+                    </p>
                 </div>
                 <div class="valor-item">
                     <div class="valor-icono">🚀</div>
@@ -205,4 +217,5 @@
     <script src="js/carrito.js"></script>
 
 </body>
+
 </html>
