--- a/productos.html
+++ b/productos.html
@@ -106,13 +106,14 @@
             <!-- Productos generados dinámicamente con JavaScript -->
         </div>
         
-        <div class="paginacion" id="paginacion">
+        <!-- NAVEGACION DE PAGINAS CUANDO HAYAN MAS Productos -->
+        <!-- <div class="paginacion" id="paginacion">
             <button class="pagina-btn active">1</button>
             <button class="pagina-btn">2</button>
             <button class="pagina-btn">3</button>
             <button class="pagina-btn">></button>
         </div>
-    </div>
+    </div> -->
 
     <footer class="footer">
         <div class="container">
