actualizacion imagenes y entrada blog

--- a/blogs.html
+++ b/blogs.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+}<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -93,13 +93,13 @@
             <!-- Entrada 1 -->
             <article class="entrada-blog">
                 <div class="blog-imagen">
-                    <img src="imagenes/blog/guia-teclados-mecanicos.jpg" alt="Guía de teclados mecánicos">
-                    <div class="blog-fecha">15 Marzo 2023</div>
+                    <img src="blog\imagenes\diferencias-tipos-switch-teclado-7.jpg" alt="Guía de teclados mecánicos">
+                    <div class="blog-fecha">10 Agosto 2025</div>
                 </div>
                 <div class="blog-contenido">
                     <h2>Guía Definitiva: Cómo Elegir el Mejor Teclado Mecánico para tus Necesidades</h2>
                     <div class="blog-meta">
-                        <span class="blog-autor">Por Ana Rodríguez</span>
+                        <span class="blog-autor">Por Millaray Miranda</span>
                         <span class="blog-categoria">Tecnología</span>
                     </div>
                     <p class="blog-resumen">Los teclados mecánicos han revolucionado la experiencia de escritura y gaming. Pero con tantas opciones en el mercado, ¿cómo elegir el adecuado? En esta guía completa analizamos los diferentes tipos de switches, layouts y características que debes considerar antes de invertir en tu próximo teclado mecánico.</p>
@@ -110,17 +110,17 @@
             <!-- Entrada 2 -->
             <article class="entrada-blog">
                 <div class="blog-imagen">
-                    <img src="imagenes/blog/monitores-gaming-2023.jpg" alt="Monitores Gaming 2023">
-                    <div class="blog-fecha">28 Febrero 2023</div>
+                    <img src="blog\imagenes\FUYAofwatKBmPuUzXDNM83-970-80.jpg.webp" alt="Monitores Gaming 2023">
+                    <div class="blog-fecha">15 Septiembre 2025</div>
                 </div>
                 <div class="blog-contenido">
-                    <h2>Top 5 Monitores Gaming 2023: Análisis y Comparativa</h2>
+                    <h2>Top 5 Monitores Gaming 2025: Análisis y Comparativa</h2>
                     <div class="blog-meta">
-                        <span class="blog-autor">Por Javier Soto</span>
+                        <span class="blog-autor">Por Sergio Soto</span>
                         <span class="blog-categoria">Gaming</span>
                     </div>
-                    <p class="blog-resumen">El 2023 ha traído increíbles avances en tecnología de monitores gaming. Desde paneles OLED hasta tasas de refresco de 360Hz, te ayudamos a navegar entre las mejores opciones del mercado. Hemos testeado los modelos más populares para traerte un análisis honesto y recomendaciones según tu presupuesto y tipo de uso.</p>
-                    <a href="blog/top-monitores-gaming-2023.html" class="blog-leer-mas">Leer más →</a>
+                    <p class="blog-resumen">El 2025 ha traído increíbles avances en tecnología de monitores gaming. Desde paneles OLED hasta tasas de refresco de 360Hz, te ayudamos a navegar entre las mejores opciones del mercado. Hemos testeado los modelos más populares para traerte un análisis honesto y recomendaciones según tu presupuesto y tipo de uso.</p>
+                    <a href="blog/top-monitores-gaming-2025.html" class="blog-leer-mas">Leer más →</a>
                 </div>
             </article>
         </section>
