--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/nav-footer.css">
     <link rel="stylesheet" href="css/login.css">
-
+    <link rel="stylesheet" href="css/home.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-
 </head>
 
 <body>
@@ -52,9 +50,6 @@
         <p>¿Ya tienes cuenta? <span class="switch" onclick="showLogin()">Inicia sesión</span></p>
     </div>
 
-
-
-
     <header class="header">
         <div class="container">
             <div class="header-content">
@@ -62,7 +57,7 @@
                     <img src="imagenes/logo-empresa/logo-removebg-preview.png" class="logo-empresa" alt="NextByte Logo">
                 </div>
                 <nav class="main-nav">
-                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="index.html" class="nav-link active">Home</a>
                     <a href="productos.html" class="nav-link">Productos</a>
                     <a href="nosotros.html" class="nav-link">Nosotros</a>
                     <a href="blogs.html" class="nav-link">Blogs</a>
@@ -86,45 +81,161 @@
         </div>
     </header>
 
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="hero-content">
+            <h1>La Tecnología del Futuro, Hoy</h1>
+            <p>Descubre los mejores productos tecnológicos para gaming, oficina y entretenimiento con los precios más competitivos del mercado.</p>
+            <div class="hero-buttons">
+                <a href="productos.html" class="btn-primary">Ver Productos</a>
+                <a href="nosotros.html" class="btn-secondary">Conócenos</a>
+            </div>
+        </div>
+        <div class="hero-image">
+            <img src="imagenes\newslarge_20220504140959_Best-Products-for-an-Aesthetic-Gaming-Set-Up.jpg" alt="Setup Gaming NextByte">
+        </div>
+    </section>
 
+    <!-- Categorías Destacadas -->
+    <section class="categorias">
+        <div class="container">
+            <h2>Categorías Destacadas</h2>
+            <div class="categorias-grid">
+                <a href="productos.html?categoria=monitores" class="categoria-card">
+                    <div class="categoria-icon">🖥️</div>
+                    <h3>Monitores</h3>
+                    <p>Desde 240Hz hasta 4K OLED</p>
+                </a>
+                <a href="productos.html?categoria=teclados" class="categoria-card">
+                    <div class="categoria-icon">⌨️</div>
+                    <h3>Teclados</h3>
+                    <p>Mecánicos y membrane</p>
+                </a>
+                <a href="productos.html?categoria=mouses" class="categoria-card">
+                    <div class="categoria-icon">🖱️</div>
+                    <h3>Mouses</h3>
+                    <p>Precisión para gaming</p>
+                </a>
+                <a href="productos.html?categoria=audio" class="categoria-card">
+                    <div class="categoria-icon">🎧</div>
+                    <h3>Audio</h3>
+                    <p>Auriculares y speakers</p>
+                </a>
+            </div>
+        </div>
+    </section>
 
-
-    <section>
-        <div class="ofertas">
-            <a href="monitor.html" class="oferta card">
-                <img src="imagenes/monitor/frontal-monitor.jpg" class="card-img-top" alt="Monitor Gamer">
-                <div class="card-body">
-                    <h5 class="card-title">Monitor Xiaomi G34WQi</h5>
-                    <div class="valor">
-                        <span>desde:</span>
-                        <p><strong>$195.990</strong></p>
-                    </div>
-                    <button class="btn btn-primary">Ver producto</button>
+    <!-- Productos Destacados -->
+    <section class="productos-destacados">
+        <div class="container">
+            <h2>Productos Destacados</h2>
+            <div class="productos-grid">
+                <div class="producto-card">
+                    <img src="imagenes/monitor/frontal-monitor.jpg" alt="Monitor Xiaomi G34WQi">
+                    <h3>Monitor Xiaomi G34WQi</h3>
+                    <p class="producto-desc">Ultrawide 34" 144Hz para gaming inmersivo</p>
+                    <p class="producto-precio">$195.990</p>
+                    <a href="monitor.html" class="btn-producto">Ver Detalles</a>
                 </div>
-            </a>
-            <a href="teclado.html" class="oferta card">
-                <img src="imagenes/teclado/teclado-ajazz.jpg" class="card-img-top" alt="Teclado mecánico">
-                <div class="card-body">
-                    <h5 class="card-title">ATTACK SHARK Ajazz AK820 Pro</h5>
-                    <div class="valor">
-                        <span>desde:</span>
-                        <p><strong>$99.990</strong></p>
-                    </div>
-                    <button class="btn btn-primary">Ver producto</button>
+                <div class="producto-card">
+                    <img src="imagenes/teclado/teclado-ajazz.jpg" alt="Teclado Ajazz AK820 Pro">
+                    <h3>ATTACK SHARK Ajazz AK820 Pro</h3>
+                    <p class="producto-desc">Teclado mecánico 75% con switches hot-swap</p>
+                    <p class="producto-precio">$99.990</p>
+                    <a href="teclado.html" class="btn-producto">Ver Detalles</a>
                 </div>
-            </a>
-            <a href="mouse.html" class="oferta card">
-                <img src="imagenes/mouse/mouse-img2.webp" class="card-img-top" alt="Mouse Gamer">
-                <div class="card-body">
-                    <h5 class="card-title">Logitech G502 Hero</h5>
-                    <div class="valor">
-                        <span>desde:</span>
-                        <p><strong>$70.000</strong></p>
-                    </div>
+                <div class="producto-card">
+                    <img src="imagenes/mouse/mouse-img2.webp" alt="Mouse Logitech G502">
+                    <h3>Logitech G502 Hero</h3>
+                    <p class="producto-desc">Sensor HERO 25K, 11 botones programables</p>
+                    <p class="producto-precio">$70.000</p>
+                    <a href="mouse.html" class="btn-producto">Ver Detalles</a>
+                </div>
+            </div>
+            <div class="text-center">
+                <a href="productos.html" class="btn-ver-todos">Ver Todos los Productos</a>
+            </div>
+        </div>
+    </section>
 
-                    <button class="btn btn-primary">Ver producto</button>
+    <!-- Banner Promocional -->
+    <section class="banner-promocional">
+        <div class="container">
+            <div class="banner-content">
+                <h2>🎉 Oferta Especial de Lanzamiento</h2>
+                <p>15% DE DESCUENTO en tu primera compra usando el código: <strong>NEXTBYTE15</strong></p>
+                <a href="productos.html" class="btn-banner">Aprovechar Oferta</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Testimonios -->
+    <section class="testimonios">
+        <div class="container">
+            <h2>Lo que Dicen Nuestros Clientes</h2>
+            <div class="testimonios-grid">
+                <div class="testimonio-card">
+                    <div class="testimonio-text">
+                        <p>"Excelente servicio al cliente y productos de primera calidad. Mi nuevo monitor gaming superó todas mis expectativas."</p>
+                    </div>
+                    <div class="testimonio-autor">
+                        <div>
+                            <h4>Carlos Martínez</h4>
+                            <span>Gamer Profesional</span>
+                        </div>
+                    </div>
                 </div>
-            </a>
+                <div class="testimonio-card">
+                    <div class="testimonio-text">
+                        <p>"La asesoría técnica que recibí fue invaluable. Me ayudaron a armar el setup perfecto para home office."</p>
+                    </div>
+                    <div class="testimonio-autor">
+                        <div>
+                            <h4>Ana Rodríguez</h4>
+                            <span>Diseñadora Gráfica</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonio-card">
+                    <div class="testimonio-text">
+                        <p>"Entrega rápida y productos bien empaquetados. Los precios son los mejores que he encontrado en Chile."</p>
+                    </div>
+                    <div class="testimonio-autor">
+                        <div>
+                            <h4>Javier Soto</h4>
+                            <span>Streamer</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Blog Preview -->
+    <section class="blog-preview">
+        <div class="container">
+            <h2>Últimas del Blog</h2>
+            <div class="blog-grid">
+                <article class="blog-card">
+                    <img src="blog/imagenes/diferencias-tipos-switch-teclado-7.jpg" alt="Guía Teclados Mecánicos">
+                    <div class="blog-content">
+                        <h3>Guía Definitiva: Cómo Elegir tu Teclado Mecánico</h3>
+                        <p>Descubre todo lo que necesitas saber sobre switches, layouts y características para encontrar el teclado perfecto.</p>
+                        <a href="blog/guia-teclados-mecanicos.html" class="blog-link">Leer más →</a>
+                    </div>
+                </article>
+                <article class="blog-card">
+                    <img src="blog\imagenes\FUYAofwatKBmPuUzXDNM83-970-80.jpg.webp" alt="Monitores Gaming 2025">
+                    <div class="blog-content">
+                        <h3>Top 5 Monitores Gaming 2025: Análisis Completo</h3>
+                        <p>Revisamos los mejores monitores del año para gaming competitivo y experiencias inmersivas.</p>
+                        <a href="blog/top-monitores-gaming-2025.html" class="blog-link">Leer más →</a>
+                    </div>
+                </article>
+            </div>
+            <div class="text-center">
+                <a href="blogs.html" class="btn-ver-todos">Ver Todos los Artículos</a>
+            </div>
         </div>
     </section>
 
@@ -155,8 +266,9 @@
         </div>
     </footer>
 
-
     <script src="js/login.js"></script>
     <script src="js/carrito.js"></script>
+    <script src="js/home.js"></script>
 
 </body>
+</html>
