actualizacion perfil y admin (DIEGO))

--- a/historial.html
+++ b/historial.html
@@ -13,7 +13,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="perfil.html">Perfil</a></li>
-                <li><a href="#">Envios</a></li>
+                <li><a href="envios.html">Envios</a></li>
             </ul>
         </div>
     </div>
