--- a/admin.html
+++ b/admin.html
@@ -64,7 +64,7 @@
                         <div class="user-line">
                             <span class="start">
                                 <img src="imagenes/admin/walterWhitee.jpeg" alt="Walter" class="avatar-s">
-                                <span>Walter W.</span>
+                                <span>Diego A.</span>
                             </span>
                             <span class="end">
                                 <img src="imagenes/admin/accept-circle.png" alt="accept" class="avatar-s" onclick="calificarComprador(this, true)">
@@ -74,7 +74,7 @@
                         <div class="user-line">
                             <span class="start">
                                 <img src="imagenes/admin/saulGoodman.jpeg" alt="Saul" class="avatar-s">
-                                <span>Saul G.</span>
+                                <span>Juan R.</span>
                             </span>
                             <span class="end">
                                 <img src="imagenes/admin/accept-circle.png" alt="accept" class="avatar-s" onclick="calificarComprador(this, true)">
@@ -97,19 +97,19 @@
                     <div class="user-line">
                         <span class="start">
                             <img src="imagenes/admin/tonyStark.jpeg" alt="Tony" class="avatar-s">
-                            <span>Tony S.</span>
+                            <span>Antonio S.</span>
                         </span>
                     </div>
                     <div class="user-line">
                         <span class="start">
                             <img src="imagenes/admin/clarkKent.jpeg" alt="Clark" class="avatar-s">
-                            <span>Clark K.</span>
+                            <span>Carlos M.</span>
                         </span>
                     </div>
                     <div class="user-line">
                         <span class="start">
                             <img src="imagenes/admin/peterParker.jpeg" alt="Peter" class="avatar-s">
-                            <span>Peter P.</span>
+                            <span>Pedro F.</span>
                         </span>
                     </div>
                     <div class="footer">
@@ -119,9 +119,7 @@
             </div>  
         </div>
         <div class="busqueda-bar">
-            <input type="text" id="buscador-admin" placeholder="Buscar comprador...">
-            <button onclick="filtrarCompradores()">Buscar</button>
-            <button onclick="cambiar_modo()">Dark Mode</button>
+            <button class="darkmode-btn" onclick="cambiar_modo()">Dark Mode</button>
         </div>
         <div class="admin-actions">
             <a href="index.html" class="volver-btn">Volver a Home</a>
