creacion compra de productos

--- a/mouse.html
+++ b/mouse.html
@@ -42,8 +42,8 @@
                         <ul id="lista-productos-previa"></ul>
                         <div class="acciones-previa">
                             <p>Total: <span id="total-previa">$0</span></p>
-                            <button id="btnVerCarritoCompleto">Comprar</button>
-                            <button id="btn-vaciar-carrito">Vaciar Carrito</button>
+                            <a href="compra.html" id="btnVerCarritoCompleto">Comprar</a>
+                            <button id="btn-vaciar-carrito" class="cart-btn">Vaciar Carrito</button>
 
                         </div>
                     </div>
@@ -87,8 +87,8 @@
                 <p>$42.990</p>
             </div>
             <div>
-                <button class="btn btn-comprar">Comprar</button>
-                <button class="btn btn-agregar">Agregar al carrito</button>
+                <a href="compra.html" id="btnVerCarritoCompleto">Comprar</a>
+                <button class="btn btn-agregar" id="btnVerCarritoCompleto">Agregar al carrito</button>
             </div>
 
             <footer class="footer">
