--- a/compra.html
+++ b/compra.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/compra.css">
 </head>
 <body>
-    <h1>Checkout</h1>
+    <h1>Compra</h1>
     <div class="checkout-container">
         <ul id="lista-productos-checkout"></ul>
         <div class="total" id="total-checkout">$0</div>
@@ -29,6 +29,6 @@
         <div id="mensaje-exito">¡Compra realizada con éxito!</div>
     </div>
 
-    <script src="js/logica-comra.js"></script>
+    <script src="js/logica-compra.js"></script>
 </body>
 </html>
