--- a/mouse.html
+++ b/mouse.html
@@ -10,13 +10,56 @@
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/nav-footer.css">
     <link rel="stylesheet" href="css/productos.css">
-
+    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/inicio-sesion.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
 
 </head>
 
 <body>
+
+     <!-- Botones login/registro -->
+    <div class="user-actions">
+        <button class="user-link" onclick="showLogin()">Iniciar sesión</button>
+        <span class="separator">|</span>
+        <button class="user-link" onclick="showRegister()">Registrarse</button>
+    </div>
+
+    <!-- Fondo oscuro -->
+    <div id="modal-overlay" class="modal-overlay" onclick="closeForms()"></div>
+
+    <!-- Modal Login -->
+    <div id="login-modal" class="modal">
+        <button class="close-btn" onclick="closeForms()">×</button>
+        <h2>Iniciar Sesión</h2>
+        <form onsubmit="event.preventDefault(); loginUser();">
+            <input type="text" id="login-usuario" placeholder="Usuario" required>
+            <input type="password" id="login-password" placeholder="Contraseña" required>
+            <button type="submit">Entrar</button>
+        </form>
+        <p>¿No tienes cuenta? <span class="switch" onclick="showRegister()">Regístrate</span></p>
+    </div>
+
+    <!-- Modal Registro -->
+    <div id="register-modal" class="modal">
+        <button class="close-btn" onclick="closeForms()">×</button>
+        <h2>Registrarse</h2>
+        <form>
+            <input type="text" placeholder="Nombre completo" required>
+            <input type="email" placeholder="Correo electrónico" required>
+            <input type="password" placeholder="Contraseña" required>
+            <button type="submit">Registrarse</button>
+        </form>
+        <p>¿Ya tienes cuenta? <span class="switch" onclick="showLogin()">Inicia sesión</span></p>
+    </div>
+
+    <!-- Panel Usuario -->
+    <div id="user-panel" style="display:none; padding:20px; background:#f5f6fa; margin:20px 0; border-radius:8px;">
+        <h2>Panel de Usuario</h2>
+        <p>Bienvenido usuario normal</p>
+    </div>
 
     <header class="header">
         <div class="container">
@@ -117,7 +160,7 @@
                     </div>
                 </div>
             </footer>
-
+            <script src="js/login.js"></script>
             <script src="js/intercambio-imagenes.js"></script>
             <script src="js/carrito.js"></script>
 
