--- a/nosotros.html
+++ b/nosotros.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="css/nav-footer.css">
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/nosotros.css">
+    <link rel="stylesheet" href="css/inicio-sesion.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 
 <body>
@@ -29,9 +31,9 @@
     <div id="login-modal" class="modal">
         <button class="close-btn" onclick="closeForms()">×</button>
         <h2>Iniciar Sesión</h2>
-        <form>
-            <input type="email" placeholder="Correo electrónico" required>
-            <input type="password" placeholder="Contraseña" required>
+        <form onsubmit="event.preventDefault(); loginUser();">
+            <input type="text" id="login-usuario" placeholder="Usuario" required>
+            <input type="password" id="login-password" placeholder="Contraseña" required>
             <button type="submit">Entrar</button>
         </form>
         <p>¿No tienes cuenta? <span class="switch" onclick="showRegister()">Regístrate</span></p>
@@ -49,6 +51,13 @@
         </form>
         <p>¿Ya tienes cuenta? <span class="switch" onclick="showLogin()">Inicia sesión</span></p>
     </div>
+
+    <!-- Panel Usuario -->
+    <div id="user-panel" style="display:none; padding:20px; background:#f5f6fa; margin:20px 0; border-radius:8px;">
+        <h2>Panel de Usuario</h2>
+        <p>Bienvenido usuario normal</p>
+    </div>
+
 
     <header class="header">
         <div class="container">
