--- a/productos.html
+++ b/productos.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="css/nav-footer.css">
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/lista-productos.css">
+    <link rel="stylesheet" href="css/inicio-sesion.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 
 <body>
