--- a/nosotros.html
+++ b/nosotros.html
@@ -139,14 +139,14 @@
             <h2 class="section-title">Nuestro Equipo</h2>
             <div class="equipo-grid">
                 <div class="miembro-equipo">
-                    <img src="imagenes\Mary Barra (1).webp" alt="Carlos Méndez" class="miembro-imagen">
+                    <img src="imagenes/equipo/Millaray.png" alt="Millaray" class="miembro-imagen">
                     <div class="miembro-nombre">Ana Rodríguez</div>
                     <div class="miembro-cargo">CEO & Fundadora</div>
                     <p>Apasionada por la tecnología y la innovación con más de 15 años de experiencia en el sector.</p>
                 </div>
                 <div class="miembro-equipo">
-                    <img src="imagenes\sarah-chemouli-banco-santander.jpg" alt="Ana Rodríguez" class="miembro-imagen">
-                    <div class="miembro-nombre">María Paz Velazquez</div>
+                    <img src="imagenes/equipo/Sergio.png" alt="Sergio" class="miembro-imagen">
+                    <div class="miembro-nombre">Sergio Ignacio Soto Covarrubias</div>
                     <div class="miembro-cargo">Directora de Marketing</div>
                     <p>Especialista en estrategias digitales y crecimiento de marcas en el ámbito tecnológico.</p>
                 </div>
@@ -157,13 +157,6 @@
                     <p>Conoce cada producto como la palma de su mano y siempre encuentra la solución perfecta para cada
                         cliente.</p>
                 </div>
-                <div class="miembro-equipo">
-                    <img src="imagenes\stock-3-2048x1366-1-1024x683.jpg" alt="María Fernández" class="miembro-imagen">
-                    <div class="miembro-nombre">Pía Fernández</div>
-                    <div class="miembro-cargo">Gerente de Soporte Técnico</div>
-                    <p>Lidera nuestro equipo de soporte asegurando que cada cliente reciba la ayuda que necesita.</p>
-                </div>
-            </div>
         </section>
 
         <!-- Sección Valores -->
