actualizacion equipo de trabajo

--- a/nosotros.html
+++ b/nosotros.html
@@ -140,19 +140,19 @@
             <div class="equipo-grid">
                 <div class="miembro-equipo">
                     <img src="imagenes/equipo/Millaray.png" alt="Millaray" class="miembro-imagen">
-                    <div class="miembro-nombre">Ana Rodríguez</div>
+                    <div class="miembro-nombre">Millaray Miranda</div>
                     <div class="miembro-cargo">CEO & Fundadora</div>
                     <p>Apasionada por la tecnología y la innovación con más de 15 años de experiencia en el sector.</p>
                 </div>
                 <div class="miembro-equipo">
                     <img src="imagenes/equipo/Sergio.png" alt="Sergio" class="miembro-imagen">
-                    <div class="miembro-nombre">Sergio Ignacio Soto Covarrubias</div>
+                    <div class="miembro-nombre">Sergio Soto</div>
                     <div class="miembro-cargo">Directora de Marketing</div>
                     <p>Especialista en estrategias digitales y crecimiento de marcas en el ámbito tecnológico.</p>
                 </div>
                 <div class="miembro-equipo">
-                    <img src="imagenes\mejor-jefe-ventas_003.jpg" alt="Javier Soto" class="miembro-imagen">
-                    <div class="miembro-nombre">Javier Soto</div>
+                    <img src="imagenes\Captura de pantalla 2025-09-21 225943.png" alt="Javier Soto" class="miembro-imagen">
+                    <div class="miembro-nombre">Diego Sepúlveda</div>
                     <div class="miembro-cargo">Jefe de Ventas</div>
                     <p>Conoce cada producto como la palma de su mano y siempre encuentra la solución perfecta para cada
                         cliente.</p>
@@ -182,7 +182,7 @@
                 <div class="valor-item">
                     <div class="valor-icono">❤️</div>
                     <div class="valor-titulo">Pasión</div>
-                    <p>Amamos la tecnología y eso se refleja en nuestro trabajo y atención al cliente每一天.</p>
+                    <p>Amamos la tecnología y eso se refleja en nuestro trabajo y atención al cliente.</p>
                 </div>
             </div>
         </section>
