--- a/nosotros.html
+++ b/nosotros.html
@@ -147,7 +147,7 @@
                 <div class="miembro-equipo">
                     <img src="imagenes/equipo/Sergio.png" alt="Sergio" class="miembro-imagen">
                     <div class="miembro-nombre">Sergio Soto</div>
-                    <div class="miembro-cargo">Directora de Marketing</div>
+                    <div class="miembro-cargo">Director de Marketing</div>
                     <p>Especialista en estrategias digitales y crecimiento de marcas en el ámbito tecnológico.</p>
                 </div>
                 <div class="miembro-equipo">
